# hefty

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: cams_example.ipynb  ensemble_example.ipynb  more_solar_examples.ipynb  solar_example.ipynb  wind_example.ipynb
src/hefty/: __init__.py  custom.py  pv_model.py  solar.py  utilities.py  wind.py
