[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hefty"
version = "0.0.6"
description = "Some (relatively) lightweight short-term energy forecasting tools for solar, wind, and load."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name="Will Hobbs" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "herbie-data[extras] >= 2026.1.0",
    "pvlib >= 0.13.1",
    "pandas >= 3.0.0",
]
license = "BSD-3-Clause"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/williamhobbs/hefty"
Issues = "https://github.com/williamhobbs/hefty/issues"